# Swiss-federal-court-data-generation

./: .dockerignore  .env.example  .gitignore  .mergify.yml  .pre-commit-config.yaml  CONTRIBUTING.md  DATA_LICENSE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  codeql.yaml  gitguardian.yaml  release.yaml  setup-labels.yaml  stale.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yaml
src/swiss_court_data_gen/: __init__.py  cli.py  py.typed  synthetic_data_generation.py
tests/: __init__.py  conftest.py  test_cli.py  test_init.py  test_synthetic_data_generation.py
